chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -82,7 +82,7 @@
   "GO_TO_SETTINGS": "ZU EINSTELLUNGEN",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Ein mit der Indizierung verbundener Vorgang ist bereits im Gange. Bitte gedulden Sie sich noch etwas.",
@@ -145,10 +145,10 @@
   "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Empfehlungen",
   "REFRESH": "Aktualisieren",
-  "REFRESH_INFORMATION": "Überprüft die neu hinzugefügten & gelöschten Dateien und aktualisiert die Musikbibliothek (schneller)",
+  "REFRESH_INFORMATION": "Überprüft die neu hinzugefügten & gelöschten Dateien und aktualisiert die Musikbibliothek [schneller]",
   "REFRESH_SUBTITLE": "Überprüfung auf neu hinzugekommene und gelöschte Musikdateien zum Aktualisieren der Musikbibliothek.",
   "REINDEX": "Neu indizieren",
-  "REINDEX_INFORMATION": "Baut die Musikbibliothek neu auf (langsamer)",
+  "REINDEX_INFORMATION": "Baut die Musikbibliothek neu auf [langsamer]",
   "REINDEX_SUBTITLE": "Nach dem Löschen der aktuellen Datenbank wird die gesamte Musikbibliothek neu aufgebaut.",
   "REMOVE": "Entfernen",
   "REMOVE_FROM_PLAYLIST": "aus Playlist entfernen",
@@ -234,7 +234,7 @@
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "Warnung",
-  "WEB": "YT Music",
+  "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Wir spielen Ihre lokale Musik, bis Sie wieder online sind..",
   "WEB_NO_RESULTS": "Nichts Derartiges konnte gefunden werden.",
   "WEB_WELCOME": "Nach Musik suchen oder einen Link angeben",
