--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -82,7 +82,7 @@
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Une opération d'indexation est déjà en cours. Veuillez patienter.",
@@ -234,7 +234,7 @@
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "Attention",
-  "WEB": "YT Music",
+  "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Lire votre musique locale en attendant d'être à nouveau connecté.",
   "WEB_NO_RESULTS": "Aucune correspondance trouvée.",
   "WEB_WELCOME": "Rechercher une chanson ou un lien",
