--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -82,7 +82,7 @@
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
@@ -145,10 +145,10 @@
   "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Ajánlott",
   "REFRESH": "FRISSÍTÉS",
-  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Reindex",
-  "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_INFORMATION": "Builds the music library again [slower].",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
@@ -234,10 +234,10 @@
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "Warning",
-  "WEB": "YT Music",
+  "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Folytassuk a helyi zenéiddel, amíg vissza nem tér az internet.",
-  "WEB_NO_RESULTS": "Nincs találat a YT Music-on!",
-  "WEB_WELCOME": "Keresés a YT Music-on (vagy link bemásolása)",
+  "WEB_NO_RESULTS": "Nincs találat a YouTube Music-on!",
+  "WEB_WELCOME": "Keresés a YouTube Music-on (vagy link bemásolása)",
   "WEB_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
   "WEB_WELCOME_TITLE": "Let's Go",
   "YEAR": "Year",
