--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -82,7 +82,7 @@
   "GO_TO_SETTINGS": "KE PENGATURAN",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
