--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -82,7 +82,7 @@
   "GO_TO_SETTINGS": "設定に移動する",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
@@ -145,10 +145,10 @@
   "PROXY_URL": "プロキシURL",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
-  "REFRESH_INFORMATION": "新しく追加されたファイルや削除されたファイルのみチェックし、音楽ライブラリを更新します (高速)",
+  "REFRESH_INFORMATION": "新しく追加されたファイルや削除されたファイルのみチェックし、音楽ライブラリを更新します [高速]",
   "REFRESH_SUBTITLE": "新しく追加/削除されたファイルで音楽ライブラリを更新するためにチェックします。",
   "REINDEX": "再インデックス",
-  "REINDEX_INFORMATION": "音楽ライブラリを再び構築します (低速)",
+  "REINDEX_INFORMATION": "音楽ライブラリを再び構築します [低速]",
   "REINDEX_SUBTITLE": "現在のデータベースをクリア後、完全な音楽ライブラリを構築します。",
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
@@ -234,7 +234,7 @@
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "注意",
-  "WEB": "YT Music",
+  "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "オンラインに復帰するまで端末の音楽を再生しましょう。",
   "WEB_NO_RESULTS": "見つかりませんでした。",
   "WEB_WELCOME": "音楽を検索するかリンクを入力",
