--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -82,7 +82,7 @@
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
@@ -145,10 +145,10 @@
   "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
-  "REFRESH_INFORMATION": "Samo preveri za nove & izbrisane datoteke za posodobitev glasbene zbirke (hitreje)",
+  "REFRESH_INFORMATION": "Samo preveri za nove & izbrisane datoteke za posodobitev glasbene zbirke [hitreje]",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Reindeksiraj",
-  "REINDEX_INFORMATION": "Ponovno zgradi glasbeno zbirko (počasneje)",
+  "REINDEX_INFORMATION": "Ponovno zgradi glasbeno zbirko [počasneje]",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
@@ -234,7 +234,7 @@
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "Opozorilo",
-  "WEB": "YT Music",
+  "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
   "WEB_NO_RESULTS": "Iskali smo širno, a tega nismo mogli najti.",
   "WEB_WELCOME": "Išči za glasbo ali pa vpiši povezavo",
