--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -82,7 +82,7 @@
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
   "HIDE_LYRICS": "Ocultar letras",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Importar do YT Music",
+  "IMPORT_PLAYLIST_FROM_WEB": "Importar do YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Insira o URL da playlist",
   "IMPORT_PLAYLIST_TITLE": "Importar Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
@@ -234,7 +234,7 @@
   "VISUALS": "Adicione ou remova visuais visíveis durante a reprodução de música",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "Aviso",
-  "WEB": "YT Music",
+  "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Vamos tocar sua música local, enquanto você fica online novamente..",
   "WEB_NO_RESULTS": "Nada como isso poderia ser encontrado.",
   "WEB_WELCOME": "Pesquise músicas ou forneça um link",
