chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Finden von Dateien...",
   "DONATE": "Spenden",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "UPDATE DOWNLOADEN",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Einzelheiten bearbeiten",
   "ENABLE_125_SCALING": "125% Skalierung aktivieren.",
   "ENABLE_ACRYLIC_BLUR": "Windows-Acryl-Blur-Effekt aktivieren",
@@ -150,6 +151,7 @@
   "REINDEX": "Neu indizieren",
   "REINDEX_INFORMATION": "Baut die Musikbibliothek neu auf [langsamer]",
   "REINDEX_SUBTITLE": "Nach dem Löschen der aktuellen Datenbank wird die gesamte Musikbibliothek neu aufgebaut.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Entfernen",
   "REMOVE_FROM_PLAYLIST": "aus Playlist entfernen",
   "REPEAT": "Wiederholung",
