--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Découverte des fichiers...",
   "DONATE": "Faire un don",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "Télécharger la mise à jour",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "Activer le flou acrylique Windows",
@@ -150,6 +151,7 @@
   "REINDEX": "Ré-indexer",
   "REINDEX_INFORMATION": "Reconstruire la bibliothèque musicale (plus lent)",
   "REINDEX_SUBTITLE": "Reconstruire la bibliothèque musicale après avoir effacé la base de données actuelle.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Retirer",
   "REMOVE_FROM_PLAYLIST": "Retirer de la playlist",
   "REPEAT": "Répéter",
