--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Temukan File...",
   "DONATE": "Donasi",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "PERBARUI",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktifkan skala 125% .",
   "ENABLE_ACRYLIC_BLUR": "Aktifkan blur akrilik Windows.",
@@ -150,6 +151,7 @@
   "REINDEX": "Daftarkan ulang",
   "REINDEX_INFORMATION": "Buat perpustakaan musik lagi (lebih lambat)",
   "REINDEX_SUBTITLE": "Buat perpustakaan musik lengkap setelah menghapus database sekarang.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Hapus",
   "REMOVE_FROM_PLAYLIST": "Hapus dari daftar putar",
   "REPEAT": "Ulangi",
