--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Descobrindo arquivos...",
   "DONATE": "Doar",
   "DONE": "Feito",
-  "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
@@ -150,6 +151,7 @@
   "REINDEX": "Reindexar",
   "REINDEX_INFORMATION": "Construir a biblioteca de música novamente (mais lento)",
   "REINDEX_SUBTITLE": "Construir a biblioteca de música completa depois de limpar o banco de dados atual.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remover",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repetir",
