--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktivera 125% uppskalning.",
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
@@ -150,6 +151,7 @@
   "REINDEX": "Omindexera",
   "REINDEX_INFORMATION": "Builds the music library again [slower].",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Ta bort från spellista",
   "REPEAT": "Repeat",
