--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "正在发现文件...",
   "DONATE": "捐赠",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "下载更新",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "编辑详细信息",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
@@ -150,6 +151,7 @@
   "REINDEX": "重新检索",
   "REINDEX_INFORMATION": "再次构建音乐库（较慢）",
   "REINDEX_SUBTITLE": "清除当前数据库后建立完整的音乐库。",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "移除",
   "REMOVE_FROM_PLAYLIST": "从播放列表移除",
   "REPEAT": "重复",
