--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "دانلود آخرین بروزرسانی",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "فعال کردن مقیاس 125 درصدی",
   "ENABLE_ACRYLIC_BLUR": "فعال کردن بلور ویندوز",
@@ -150,6 +151,7 @@
   "REINDEX": "بروزرسانی",
   "REINDEX_INFORMATION": "Builds the music library again [slower].",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "حذف از لیست پخش",
   "REPEAT": "تکرار",
