--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "ファイルを探しています...",
   "DONATE": "寄付",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "アップデート",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
@@ -150,6 +151,7 @@
   "REINDEX": "再インデックス",
   "REINDEX_INFORMATION": "音楽ライブラリを再び構築します [低速]",
   "REINDEX_SUBTITLE": "現在のデータベースをクリア後、完全な音楽ライブラリを構築します。",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "削除",
   "REMOVE_FROM_PLAYLIST": "プレイリストから削除",
   "REPEAT": "リピート",
