--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Поиск файлов...",
   "DONATE": "Donate",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
@@ -150,6 +151,7 @@
   "REINDEX": "Переиндексировать",
   "REINDEX_INFORMATION": "Builds the music library again [slower].",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Повторять",
