--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Odkrivam datoteke...",
   "DONATE": "Donate",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
@@ -150,6 +151,7 @@
   "REINDEX": "Reindeksiraj",
   "REINDEX_INFORMATION": "Ponovno zgradi glasbeno zbirko [počasneje]",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
   "REPEAT": "Ponavljaj",
