--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -63,7 +63,8 @@
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
   "DONE": "Done",
-  "DOWNLOAD_UPDATE": "GÜNCELLE",
+  "DOWNLOAD": "Download now",
+  "DOWNLOAD_UPDATE": "Update",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% ölçeklemeyi etkinleştir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u etkinleştir",
@@ -150,6 +151,7 @@
   "REINDEX": "Yenile",
   "REINDEX_INFORMATION": "Builds the music library again [slower].",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REMIND_ME_NEXT_TIME": "Remind me next time",
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Oynatma listesinden kaldır",
   "REPEAT": "Tekrar",
