--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -3,12 +3,12 @@
   "ABOUT_TITLE": "О приложении",
   "ADD": "Add",
   "ADD_NEW_FOLDER": "ДОБАВИТЬ ПАПКУ",
-  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
+  "ADD_NEW_FOLDER_SUBTITLE": "Добавить новую папку в вашу музыкальную библиотеку.",
   "ADD_TO_NOW_PLAYING": "Добавить в очередь",
   "ADD_TO_PLAYLIST": "Добавить в плейлист",
   "ALBUM": "Альбомы",
   "ALBUMS_FROM_ARTIST": "Альбомы этого исполнителя.",
-  "ALBUM_ARTIST": "Album Artist",
+  "ALBUM_ARTIST": "Альбом Исполитля",
   "ALBUM_SINGLE": "Альбом",
   "ARTIST": "Исполнители",
   "ARTIST_SINGLE": "Исполнитель",
@@ -16,11 +16,11 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Добавлять другие треки из коллекции по окончании плейлиста",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Проверять наличие новых файлов при каждом запуске",
-  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
-  "AWESOME": "Awesome!",
+  "AUTO_REFRESH_SETTING_TITLE": "Автоматический поиск музыки при запуске",
+  "AWESOME": "Здорово!",
   "A_TO_Z": "По алфавиту",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
-  "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
+  "BACKGROUND_ARTWORK_TITLE": "Показать фоновое изображение",
   "BETA": "Beta",
   "BUFFERING": "Буферизация...",
   "CANCEL": "ОТМЕНА",
@@ -50,8 +50,8 @@
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
   "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
   "COMING_UP": "В очереди",
-  "CONTROL_PANEL": "Control Panel",
-  "COPY_LINK": "Copy link",
+  "CONTROL_PANEL": "Панель управления",
+  "COPY_LINK": "Копировать ссылку",
   "CREATE": "Создать",
   "CREATE_NEW_PLAYLIST": "СОЗДАТЬ НОВЫЙ ПЛЕЙЛИСТ",
   "CREATE_PLAYLIST_SUBHEADER": "Создайте новый плейлист, чтобы сортировать музыку",
@@ -68,28 +68,28 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
-  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
-  "ERROR": "Error",
-  "EXIT_FULLSCREEN": "Exit fullscreen",
+  "ENABLE_DISCORD_RPC": "Включить интеграцию Discord RPC",
+  "ERROR": "Ошибка",
+  "EXIT_FULLSCREEN": "Выйти из полноэкранного режима",
   "EXIT_NOW_PLAYING": "Закрыть очередь",
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
   "EXPERIMENTAL": "Экспериментальные",
   "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
-  "FOLDER_NOT_FOUND": "This folder could not be located",
-  "FULLSCREEN": "Enter fullscreen",
-  "GENRE": "Genre",
+  "FOLDER_NOT_FOUND": "Указанная папка не найдена",
+  "FULLSCREEN": "Войти в полноэкранный режим",
+  "GENRE": "Жанр",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
-  "HIDE_LYRICS": "Hide lyrics",
+  "HIDE_LYRICS": "Скрыть текст",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
-  "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
-  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
-  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
+  "IMPORT_PLAYLIST_FROM_WEB": "Импорт из YouTube Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Введите URL плейлиста",
+  "IMPORT_PLAYLIST_TITLE": "Импорт плейлиста",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "В данный момент выполняется индексация. Пожалуйста, подождите.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Подождите",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
-  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
+  "INVALID_PLAYLIST_URL": "неверный URL плейлиста.",
   "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Оставьте хотя бы одну папку.",
   "LESS": "Less",
@@ -133,7 +133,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
   "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
   "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
-  "PLAYLIST_NAME": "Name",
+  "PLAYLIST_NAME": "Имя",
   "PLAYLIST_SINGLE": "Плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
   "PLAY_INTERNET": "Play from internet",
@@ -155,10 +155,10 @@
   "REMOVE": "Remove",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Повторять",
-  "RESET_PITCH": "Reset pitch",
-  "RESET_SPEED": "Reset speed",
+  "RESET_PITCH": "Восстановить высоту звука",
+  "RESET_SPEED": "Восстановить скорость",
   "RESTORE": "Restore",
-  "RESTORE_DEFAULTS": "Restore Defaults",
+  "RESTORE_DEFAULTS": "Восстановить настройки по умолчанию",
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
   "RETRIEVING_INFO": "Получение информации",
   "RETRIEVING_LINK": "Получение ссылки",
@@ -205,8 +205,8 @@
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
-  "SHOW_IN_FILE_MANAGER": "Show in file manager",
-  "SHOW_LYRICS": "Show lyrics",
+  "SHOW_IN_FILE_MANAGER": "Показать в проводнике",
+  "SHOW_LYRICS": "Показать текст",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
@@ -217,7 +217,7 @@
   "SPEED": "Скорость",
   "STARTING_PLAYBACK": "Воспроизведение",
   "STATS_SUBTITLE": "Statistical details about your music library",
-  "STATS_TITLE": "Stats",
+  "STATS_TITLE": "Статистика",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
   "THEME_MODE_LIGHT": "Светлая",
