--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -65,10 +65,10 @@
   "DONE": "Done",
   "DOWNLOAD": "Download now",
   "DOWNLOAD_UPDATE": "Update",
-  "EDIT_DETAILS": "Edit details",
+  "EDIT_DETAILS": "Изменить детали",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
-  "ENABLE_DISCORD_RPC": "Включить интеграцию Discord RPC",
+  "ENABLE_DISCORD_RPC": "Включить интеграцию с Discord RPC",
   "ERROR": "Ошибка",
   "EXIT_FULLSCREEN": "Выйти из полноэкранного режима",
   "EXIT_NOW_PLAYING": "Закрыть очередь",
@@ -103,7 +103,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
   "NEXT": "Далее",
   "NO": "НЕТ",
-  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
+  "NOTHING_IN_QUEUE": "В очереди ничего нет.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Показывать тексты песен в уведомлении.",
   "NOTIFICATION_LYRICS_TITLE": "Тексты в уведомлении",
   "NOW_PLAYING": "Очередь",
@@ -136,9 +136,9 @@
   "PLAYLIST_NAME": "Имя",
   "PLAYLIST_SINGLE": "Плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
-  "PLAY_INTERNET": "Play from internet",
+  "PLAY_INTERNET": "Воспроизвести из интернета",
   "PLAY_NOW": "Проиграть",
-  "PLAY_URL": "Play URL",
+  "PLAY_URL": "Воспроизвести URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Назад",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
