chore(intl): update translated strings

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -240,8 +240,8 @@
   "WEB_INTERNET_ERROR": "Let's play your local music, while you get back online.",
   "WEB_NO_RESULTS": "Nothing like that could be found",
   "WEB_WELCOME": "Search for music or give a link",
-  "WEB_WELCOME_SUBTITLE": "Suggestions will appear here based on what you listen.",
-  "WEB_WELCOME_TITLE": "Let's Go",
+  "WEB_WELCOME_SUBTITLE": "Suggestions will appear here.",
+  "WEB_WELCOME_TITLE": "Let's Go!",
   "YEAR": "Year",
   "YES": "YES"
 }
