--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -236,7 +236,7 @@
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "Peringatan",
-  "WEB": "YT Musik",
+  "WEB": "YouTube Musik",
   "WEB_INTERNET_ERROR": "Mainkan musik lokal anda sambil menghubungkan kembali ke internet.",
   "WEB_NO_RESULTS": "Tidak dapat ditemukan",
   "WEB_WELCOME": "Cari musik atau masukkan tautan",
