--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -236,7 +236,7 @@
   "VISUALS": "Add or remove visuals visible during music playback",
   "VISUALS_TITLE": "Visuals",
   "WARNING": "警告",
-  "WEB": "YT 音乐",
+  "WEB": "YouTube 音乐",
   "WEB_INTERNET_ERROR": "当前离线中，播放一些本地音乐吧。",
   "WEB_NO_RESULTS": "未找到结果。",
   "WEB_WELCOME": "搜索音乐或输入链接",
