--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -48,7 +48,7 @@
   "COLLECTION_TRACKS_SUBHEADER": "Сохранённые треки",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
-  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Remove \"TRACK_NAME\" from \"PLAYLIST_NAME\"?",
+  "COLLECTION_TRACK_PLAYLIST_REMOVE_DIALOG_BODY": "Удалить \"TRACK_NAME\" из \"PLAYLIST_NAME\"?",
   "COMING_UP": "В очереди",
   "CONTROL_PANEL": "Панель управления",
   "COPY_LINK": "Копировать ссылку",
@@ -75,14 +75,14 @@
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
   "EXPERIMENTAL": "Экспериментальные",
-  "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
-  "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
+  "EXPERIMENTAL_SUBTITLE": "Эти настройки пока, что нестабильны",
+  "FOLDERS_NOT_FOUND": "Не удалось найти некоторые папки из вашей коллекции.\nПожалуйста, убедитесь в их наличии и перезапустите приложение или удалите эти папки, прежде чем продолжить:",
   "FOLDER_NOT_FOUND": "Указанная папка не найдена",
   "FULLSCREEN": "Войти в полноэкранный режим",
   "GENRE": "Жанр",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
   "HIDE_LYRICS": "Скрыть текст",
-  "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
+  "HIGHLIGHTED_LYRICS_SIZE": "Размер выделенного текста",
   "IMPORT_PLAYLIST_FROM_WEB": "Импорт из YouTube Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Введите URL плейлиста",
   "IMPORT_PLAYLIST_TITLE": "Импорт плейлиста",
@@ -110,8 +110,8 @@
   "NOW_PLAYING_NEXT_TRACK": "ВПЕРЁД",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Ничего не играет.",
   "NOW_PLAYING_PREVIOUS_TRACK": "НАЗАД",
-  "NOW_PLAYING_SCREEN": "Now Playing Screen",
-  "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Settings related to the \"Now Playing Screen\"",
+  "NOW_PLAYING_SCREEN": "Экран Воспроизведения",
+  "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Настройки, связанные с \"Экраном Воспроизведения\"",
   "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "Ничего не найдено.",
   "NO_COLLECTION_TITLE": "Пустая коллекция",
@@ -139,20 +139,20 @@
   "PLAY_INTERNET": "Воспроизвести из интернета",
   "PLAY_NOW": "Проиграть",
   "PLAY_URL": "Воспроизвести URL",
-  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
+  "PLAY_URL_SUBTITLE": "Введите URI медиа ресурса",
   "PREVIOUS": "Назад",
-  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
-  "PROXY_TITLE": "Proxy",
-  "PROXY_URL": "Proxy URL",
+  "PROXY_SUBTITLE": "Использовать прокси для внешних медиа ресурсов.",
+  "PROXY_TITLE": "Прокси",
+  "PROXY_URL": "Прокси URL",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
-  "REFRESH_INFORMATION": "Just checks for the newly added & deleted files to update the music library [faster].",
-  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
+  "REFRESH_INFORMATION": "Просто проверяет наличие недавно добавленных и удаленных файлов для обновления музыкальной библиотеки [быстрее].",
+  "REFRESH_SUBTITLE": "Проверяет наличие недавно добавленных и удаленных музыкальных файлов, чтобы обновить музыкальную библиотеку.",
   "REINDEX": "Переиндексировать",
-  "REINDEX_INFORMATION": "Builds the music library again [slower].",
-  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
-  "REMIND_ME_NEXT_TIME": "Remind me next time",
-  "REMOVE": "Remove",
+  "REINDEX_INFORMATION": "Заново создает музыкальную библиотеку [медленнее].",
+  "REINDEX_SUBTITLE": "Создает полную музыкальную библиотеку после очистки текущей базы данных.",
+  "REMIND_ME_NEXT_TIME": "Напомнить мне в следующий раз",
+  "REMOVE": "Удалить",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Повторять",
   "RESET_PITCH": "Восстановить высоту звука",
@@ -207,16 +207,16 @@
   "SHOW_ALBUM": "Показать альбом",
   "SHOW_IN_FILE_MANAGER": "Показать в проводнике",
   "SHOW_LYRICS": "Показать текст",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Перейти к экрану Исполняется во время воспроизведения",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Включить индикатор панели задач",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Показывать процент воспроизведения трека на панели задач",
   "SHUFFLE": "Перемешивать",
   "SORT": "Сортировка",
   "SORT_BY": "Сортировать",
   "SPEED": "Скорость",
   "STARTING_PLAYBACK": "Воспроизведение",
-  "STATS_SUBTITLE": "Statistical details about your music library",
+  "STATS_SUBTITLE": "Статистические данные о вашей музыкальной библиотеке",
   "STATS_TITLE": "Статистика",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
@@ -227,14 +227,14 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Трек",
   "TRANSFERS": "ПЕРЕДАЧИ",
-  "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
+  "UNHIGHLIGHTED_LYRICS_SIZE": "Размер невыделенного текста",
   "UNMUTE": "Включить звук",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
   "USE_THESE_CHARACTERS_TO_SEPARATE_ARTISTS": "Use ; // / \\\\ or \\ to separate multiple artists.",
   "VIDEO_SINGLE": "Видео",
-  "VISUALS": "Add or remove visuals visible during music playback",
-  "VISUALS_TITLE": "Visuals",
+  "VISUALS": "Добавляйте или удаляйте визуальные эффекты, видимые во время воспроизведения музыки",
+  "VISUALS_TITLE": "Визуальные эффекты",
   "WARNING": "Предупреждение",
   "WEB": "YouTube Music",
   "WEB_INTERNET_ERROR": "Пока можете послушать локальную музыку...",
