--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -81,6 +81,7 @@
   "FULLSCREEN": "Entrar em tela cheia",
   "GENRE": "Gênero",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
+  "HIDE": "Hide",
   "HIDE_LYRICS": "Ocultar letras",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMPORT_PLAYLIST_FROM_WEB": "Importar do YouTube Music",
