--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -81,6 +81,7 @@
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GÅ TILL INSTÄLLNINGAR",
+  "HIDE": "Hide",
   "HIDE_LYRICS": "Hide lyrics",
   "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMPORT_PLAYLIST_FROM_WEB": "Import from YouTube Music",
