chore(intl): update translations

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -106,7 +106,7 @@
   "NO": "NO",
   "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
-  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics.",
+  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
   "NOW_PLAYING": "Now playing",
   "NOW_PLAYING_NEXT_TRACK": "NEXT",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
