feat: update translations

--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -68,7 +68,10 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "Activer le flou acrylique Windows",
+  "ENABLE_DENSE_ALBUMS_LAYOUT": "Dense albums layout",
+  "ENABLE_DENSE_ARTISTS_LAYOUT": "Dense artists layout",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ENABLE_GRID_ARTISTS_LAYOUT": "Grid artists layout",
   "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Quitter \"En cours de lecture\"",
