--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -68,7 +68,10 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
+  "ENABLE_DENSE_ALBUMS_LAYOUT": "Dense albums layout",
+  "ENABLE_DENSE_ARTISTS_LAYOUT": "Dense artists layout",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ENABLE_GRID_ARTISTS_LAYOUT": "Grid artists layout",
   "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "再生中を閉じる",
