--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -68,7 +68,10 @@
   "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
+  "ENABLE_DENSE_ALBUMS_LAYOUT": "Dense albums layout",
+  "ENABLE_DENSE_ARTISTS_LAYOUT": "Dense artists layout",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ENABLE_GRID_ARTISTS_LAYOUT": "Grid artists layout",
   "ERROR": "Erro",
   "EXIT_FULLSCREEN": "Sair da tela cheia",
   "EXIT_NOW_PLAYING": "Sair agora da reprodução",
