--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -68,7 +68,10 @@
   "EDIT_DETAILS": "Изменить детали",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
+  "ENABLE_DENSE_ALBUMS_LAYOUT": "Dense albums layout",
+  "ENABLE_DENSE_ARTISTS_LAYOUT": "Dense artists layout",
   "ENABLE_DISCORD_RPC": "Включить интеграцию с Discord RPC",
+  "ENABLE_GRID_ARTISTS_LAYOUT": "Grid artists layout",
   "ERROR": "Ошибка",
   "EXIT_FULLSCREEN": "Выйти из полноэкранного режима",
   "EXIT_NOW_PLAYING": "Закрыть очередь",
