--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -68,7 +68,10 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
+  "ENABLE_DENSE_ALBUMS_LAYOUT": "Dense albums layout",
+  "ENABLE_DENSE_ARTISTS_LAYOUT": "Dense artists layout",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ENABLE_GRID_ARTISTS_LAYOUT": "Grid artists layout",
   "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Zapri trenutno predvajano",
