--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -68,7 +68,10 @@
   "EDIT_DETAILS": "编辑详细信息",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
+  "ENABLE_DENSE_ALBUMS_LAYOUT": "Dense albums layout",
+  "ENABLE_DENSE_ARTISTS_LAYOUT": "Dense artists layout",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ENABLE_GRID_ARTISTS_LAYOUT": "Grid artists layout",
   "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "退出正在播放",
