--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -76,6 +76,7 @@
   "EXIT_TITLE": "Выход",
   "EXPERIMENTAL": "Экспериментальные",
   "EXPERIMENTAL_SUBTITLE": "Эти настройки пока что нестабильны",
+  "FILE_INFORMATION": "File information",
   "FOLDERS_NOT_FOUND": "Не удалось найти некоторые папки из Вашей коллекции.\nПожалуйста, убедитесь в их наличии и перезапустите приложение или удалите эти папки, прежде чем продолжить:",
   "FOLDER_NOT_FOUND": "Указанная папка не найдена",
   "FULLSCREEN": "Войти в полноэкранный режим",
