--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -76,6 +76,7 @@
   "EXIT_TITLE": "Çıx",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "FILE_INFORMATION": "File information",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
