--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -76,6 +76,7 @@
   "EXIT_TITLE": "Tutup",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Pengaturan ini belum ditandai sebagai pengaturan stabil.",
+  "FILE_INFORMATION": "File information",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
