--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -76,6 +76,7 @@
   "EXIT_TITLE": "終了",
   "EXPERIMENTAL": "実験的",
   "EXPERIMENTAL_SUBTITLE": "これらの設定は実験的なものです",
+  "FILE_INFORMATION": "File information",
   "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
   "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
